--- a/index.html
+++ b/index.html
@@ -316,6 +316,8 @@
                         </li>
                     </ul>
                 </div>
+		</br></br></br>
+		<span id="visitCounterDisplay">2</span>
             </section>
         </div>
 		
