--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		
     </head>
 	
-    <body id="page-top">
+    <body id="page-top" onload="incrementVisit(1)">
 	
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
@@ -318,7 +318,7 @@
                 </div>
 		
 		</br></br></br>
-		<span id="visitCounterDisplay">2</span>
+		<span id="visitCounterDisplay" style="color:white;">2</span>
             </section>
         </div>
 		
@@ -332,3 +332,20 @@
 		
     </body>
 </html>
+
+<script>
+	function incrementVisit(val)
+	{
+		if (localStorage.pagecount)
+		 {
+		 localStorage.pagecount=Number(localStorage.pagecount) +val;
+		 }
+		else
+		 {
+		 localStorage.pagecount=1;
+		 }
+		
+		display_box = document.getElementById( "visitCounterDisplay");
+		display_box.innerHTML = localStorage.pagecount
+	}
+</script>
