--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 </div>
 		
 		</br></br></br>
-		<span id="visitCounterDisplay" style="color:white;">2</span>
+		<span id="visitCounterDisplay" style="color:white"></span>
             </section>
         </div>
 		
