--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 	
             </section>
 		</br></br></br>
-		<span id="visitCounterDisplay" style="color:black"></span>
+		<span id="visitCounterDisplay" style="color:white"></span>
         </div>
 		
         <!-- Bootstrap core JS-->
