--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	{
 		if (localStorage.pagecount)
 		 {
-		 localStorage.pagecount=Number(localStorage.pagecount) +1;
+		 localStorage.pagecount=Number(localStorage.pagecount) +val;
 		 }
 		else
 		 {
