--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="mailto:name@email.com"> amanalphakumar@gmail.com </a>
                     </div>
                     <p class="lead mb-5">
-						Hi, I am Aman, currently in final year of B.Tech program in Computer Science and Engineering at Indian Institute of Information Technology, Nagpur.
+						Hi, I am Aman, B.Tech in Computer Science and Engineering at Indian Institute of Information Technology, Nagpur of passout batch 2020.
 						I have worked as a Software Developer Intern at <i>The Solar Labs</i>.
 						</br></br>
 						I am a software developer interested in creating tools for helping people and have created many projects for same.
