--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                         <a href="mailto:name@email.com"> amanalphakumar@gmail.com </a>
                     </div>
                     <p class="lead mb-5">
-						Hi, I am Aman, B.Tech in Computer Science and Engineering at Indian Institute of Information Technology, Nagpur of passout batch 2020.
+			    			Hi, I am Aman, <strong>B.Tech</strong> in <strong>Computer Science and Engineering</strong> at 
+			    			<strong>Indian Institute of Information Technology, Nagpur</strong> of passout batch 2020.
 						I have worked as a Software Developer Intern at <i>The Solar Labs</i>.
 						</br></br>
 						I am a software developer interested in creating tools for helping people and have created many projects for same.
@@ -66,7 +67,7 @@
 						I am interested in Software Development and Full-Stack Development roles.
 						</br></br>
 						Since you are here, I will be happy to connect with you for a good discussion on complexities of the world.
-						You follow the links below to know more about me. This is my concise portfolio. If you are in no hurry, check out my full website.
+						Follow the links below to know more about me. This is my concise portfolio. If you are in no hurry, check out my full website.
 					</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/amanalphakumar" target="blank"><i class="fab fa-linkedin-in" title="LinkedIn"></i></a>
