--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
                         </li>
 						<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <i>ContentBucket</i> project got deployed on College LAN at IIIT Nagpur in 2019.
+							<i><a href="https://github.com/alpha74/ContentBucket">ContentBucket</a></i> 
+				project got deployed on College LAN at IIIT Nagpur in 2019.
                         </li>
 						<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
