--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 										Used <i> RapidJSON </i> and <i> nlohmann </i> json parsers for working on json data in C++
 									</li>
 									<li>
-										Implemented parallel processing on the compute internsive C++ module by writing sub-modules in NVCC CUDA platform.
+										Implemented parallel processing on the compute internsive C++ module by writing sub-modules in <a href="https://github.com/alpha74/CUDA_basics"> NVCC CUDA </a> platform.
 									</li>
 								</ul>
 								<br>
@@ -126,10 +126,10 @@
 										Created REST APIs for simulating the <i>Google Map API</i> for usage in <i>The Design Studio</i> (product by <i>The Solar Labs</i>)
 									</li>
 									<li>
-										Given coordinates(lat,long,zoom_level), API provides access to satellite imagery by automating the <i>Google Earth</i> software
+										Given coordinates(lat,long,zoom_level), API provides access to <a href="https://github.com/alpha74/gep_text_extractor"> satellite imagery </a> by automating the <i>Google Earth</i> software
 									</li>
 									<li>
-										Satellite imagery is important for Solar Rooftop designing and clouds are an obstacle. API request generates the historic images, uploads on cloud and returns links (Flask, Python, AWS, GCP, Google Earth)
+										Satellite imagery is important for Solar Rooftop designing and clouds are an obstacle. API request generates the <a href="https://github.com/alpha74/Image_to_JSON_encoder"> historic images </a>, uploads on cloud and returns links (Flask, Python, AWS, GCP, Google Earth)
 									</li>
 								</ul>
 							
@@ -282,7 +282,7 @@
                             <sup>rd</sup>
                             prize - Bronze medal in Inter-IIIT BasketBall 2020.
                         </li>
-						<li>
+			<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
 							<i><a href="https://github.com/alpha74/ContentBucket">ContentBucket</a></i> 
 				project got deployed on College LAN at IIIT Nagpur in 2019.
@@ -293,7 +293,8 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <i>Library Manager</i> project got deployed on College LAN at IIIT Nagpur in 2018.
+                            <i><a href = "https://github.com/alpha74/LibraryOTG/tree/master/libraryotg_github"> Library Manager </a></i> 
+				project got deployed on College LAN at IIIT Nagpur in 2018.
                         </li>
 						<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -310,11 +311,11 @@
 					<ul class="fa-ul mb-0">
                        	<li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <i>Version Control with Git</i> - Coursera 2020.
+				<i><a href="https://github.com/alpha74/Version_Control_with_Git">Version Control with Git</a></i> - Coursera 2020.
                         </li>
-						<li>
+			<li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-                            <i>NJACK WinterOfCode</i> by IIT Pune - contributed on various projects 2019-20.
+                            <i><a href="https://github.com/alpha74/nwoc_algorithms">NJACK WinterOfCode</a></i> by IIT Pune - contributed on various projects 2019-20.
                         </li>
                     </ul>
                 </div>
