--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p class="lead mb-5">
 			    			Hi, I am Aman, <strong>B.Tech</strong> in <strong>Computer Science and Engineering</strong> at 
 			    			<strong>Indian Institute of Information Technology, Nagpur</strong> of passout batch 2020.
-						I have worked as a Software Developer Intern at <i>The Solar Labs</i>.
+						I have worked as a Software Developer Intern at <i><a href="https://thesolarlabs.com/" target="_blank">The Solar Labs</a></i>.
 						</br></br>
 						I am a software developer interested in creating tools for helping people and have created many projects for same.
 						</br>
