Add Codechef star.

--- a/index.html
+++ b/index.html
@@ -272,7 +272,12 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Achievements & Certifications</h2>
                     <ul class="fa-ul mb-0">
-						<li>
+			<li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+				<i><a href="https://www.codechef.com/users/amanalphakumar"> 3* </a></i> 
+				on Codechef.
+                        </li>
+			<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <i>#100daysOfCode</i> : Achieved 101 days streak on <i>InterviewBit</i> in 2020.
                         </li>
@@ -284,7 +289,7 @@
                         </li>
 			<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-							<i><a href="https://github.com/alpha74/ContentBucket">ContentBucket</a></i> 
+				<i><a href="https://github.com/alpha74/ContentBucket">ContentBucket</a></i> 
 				project got deployed on College LAN at IIIT Nagpur in 2019.
                         </li>
 						<li>
