--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 						I am interested in Software Development and Full-Stack Development roles.
 						</br></br>
 						Since you are here, I will be happy to connect with you for a good discussion on complexities of the world.
-						Follow the links below to know more about me. This is my concise portfolio. If you are in no hurry, check out my full website.
+						Follow the links below to know more about me. Follow Github to view all projects.
 					</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/amanalphakumar" target="blank"><i class="fab fa-linkedin-in" title="LinkedIn"></i></a>
                         <a class="social-icon" href="https://www.github.com/alpha74" target="blank"><i class="fab fa-github" title="Github"></i></a>
                         <a class="social-icon" href="https://amanalphakumar.blogspot.com" target="blank"><i class="fab fa-blogger-b" title="Blogger"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/amanalphakumar" target="blank"><i class="fab fa-instagram" target="blank" title="Instagram"></i></a>
-						<a class="social-icon" href="#" target="blank"><i class="fas fa-globe" target="blank" title="Coming soon"></i></a>
+			<!--<a class="social-icon" href="#" target="blank"><i class="fas fa-globe" target="blank" title="Coming soon"></i></a>-->
                     </div>
                 </div>
             </section>
