--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="assets/pdf/Aman_Kumar-resume.pdf"> Resume </a></li>
+			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="assets/pdf/Aman_Kumar-resume.pdf"> Resume </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"> About </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education"> Education </a></li>
@@ -67,7 +67,7 @@
 						I am interested in Software Development and Full-Stack Development roles.
 						</br></br>
 						Since you are here, I will be happy to connect with you for a good discussion on complexities of the world.
-						Follow the links below to know more about me. Follow Github to view all projects.
+						Follow the links below to know more about me. Follow Github to view all the projects.
 					</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/amanalphakumar" target="blank"><i class="fab fa-linkedin-in" title="LinkedIn"></i></a>
