Add star symbol.

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <ul class="fa-ul mb-0">
 			<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-				<i><a href="https://www.codechef.com/users/amanalphakumar"> 3* </a></i> 
+				<i><a href="https://www.codechef.com/users/amanalphakumar"> 3 &#9733; </a></i> 
 				on Codechef.
                         </li>
 			<li>
