--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         </li>
 						<li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            XAMPP, Apache Tomcat, Django, Flask
+                            XAMPP, Apache Tomcat, Django, Django REST Framework, Flask
                         </li>
 						<li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
