Add new course completion.

--- a/index.html
+++ b/index.html
@@ -314,6 +314,11 @@
                     </ul>
 					</br>
 					<ul class="fa-ul mb-0">
+			https://www.udemy.com/certificate/UC-cc342af3-e5f8-47e0-b2a7-ae641c19d40f/						
+			<li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+				<i><a href="https://www.udemy.com/certificate/UC-cc342af3-e5f8-47e0-b2a7-ae641c19d40f/"> Successful Negotiations: Master Your Negotiating Skills </a></i> - Udemy 2021.
+                        </li>
                        	<li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
 				<i><a href="https://github.com/alpha74/Version_Control_with_Git">Version Control with Git</a></i> - Coursera 2020.
