--- a/index.html
+++ b/index.html
@@ -316,6 +316,10 @@
 		    <ul class="fa-ul mb-0">						
 			<li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+				<i><a href="https://www.udemy.com/certificate/UC-293cd4a5-49a5-4794-8af2-70a6e19bfe7e/"> Stock Market for Beginners- How to Start Investing Today </a></i> - Udemy 2021.
+                        </li>
+			<li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
 				<i><a href="https://www.udemy.com/certificate/UC-cc342af3-e5f8-47e0-b2a7-ae641c19d40f/"> Successful Negotiations: Master Your Negotiating Skills </a></i> - Udemy 2021.
                         </li>
                        	<li>
