Add Udemy course cert links.

--- a/index.html
+++ b/index.html
@@ -369,7 +369,19 @@
                         </li>
                     </ul>
 		    </br>
-		    <ul class="fa-ul mb-0">						
+		    <ul class="fa-ul mb-0">	
+			<li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+				<i><a href="https://www.udemy.com/certificate/UC-1543118d-86a0-422d-9cf5-9bc47b6e1f7c/"> The Story Course: Story Telling Masterclass </a></i> - Udemy 2021.
+                        </li>
+			<li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+				<i><a href="https://www.udemy.com/certificate/UC-da3a43ed-a742-438c-bde5-078e3c8e1693/"> The Complete Splunk Begineer Course[2021] </a></i> - Udemy 2021.
+                        </li>
+			<li>
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+				<i><a href="https://www.udemy.com/certificate/UC-e1385728-5758-4b38-8c0c-7960a1bffd35/"> Communication Fundamentals: How to Communicate Better </a></i> - Udemy 2021.
+                        </li>
 			<li>
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
 				<i><a href="https://www.udemy.com/certificate/UC-293cd4a5-49a5-4794-8af2-70a6e19bfe7e/"> Stock Market for Beginners- How to Start Investing Today </a></i> - Udemy 2021.
