Update current company. Update indents.

--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
                     <p class="lead mb-5">
 			    			Hi, I am Aman, <strong>B.Tech</strong> in <strong>Computer Science and Engineering</strong> at 
 			    			<strong>Indian Institute of Information Technology, Nagpur</strong> of passout batch 2020. 
-			    			I am currently working at <i><a href="https://thesolarlabs.com/" target="_blank">Clevertap</a></i>. 
-			    			I have worked as a Backend Engineer at <i><a href="https://www.airveda.com/" target="_blank">Airveda</a></i>.
-						I have also worked as a Software Developer Intern at <i><a href="https://clevertap.com/" target="_blank">The Solar Labs</a></i>.
+			    			I am currently working at <i><a href="https://groww.in/" target="_blank"> Groww </a></i>. 
+			    			I have worked as a Software Engineer at <i><a href="https://clevertap.com/" target="_blank"> Clevertap </a> 
+                                and <i><a href="https://www.airveda.com/" target="_blank">Airveda</a></i>.
+						I have also worked as a Software Developer Intern at <i><a href="https://thesolarlabs.com/" target="_blank">The Solar Labs</a></i>.
 						</br></br>
 						I am a software developer interested in creating tools for helping people and have created many projects for same.
-						</br>
-						I also contribute to Open source and slog as a Competitve programmer.
 						</br></br>
 						Since you are here, I will be happy to connect with you for a good discussion on complexities of the world.
 						Follow the links below to know more about me. Follow Github to view all the projects.
@@ -86,27 +85,48 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
 			
-			
+			<!-- 4 start -->
+			<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0"> Software Engineer </h3>
+                    <div class="subheading mb-3"> Groww, Bangalore </div>
+                    <p>     
+                        <ul>
+                            <li> 
+                                Working on <strong> Credit </strong> backend team (Java, Spring Boot)
+                            </li>
+                            <li>
+                                Working on creating and maintaining APIs used in whole Credit service feature.
+                            </li>
+                        </ul>
+
+                    </p>
+                    </div>
+                <div class="flex-shrink-0"><span class="text-primary"> Jan 2020 - Present </span></div>
+            </div>	
+            <!-- 4 end -->
+
+
 			<!-- 3 start -->
 			<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"> Software Engineer </h3>
-                        	<div class="subheading mb-3"> CleverTap, Mumbai </div>
-                            	<p>
+                <div class="flex-grow-1">
+                    <h3 class="mb-0"> Software Engineer </h3>
+                    <div class="subheading mb-3"> CleverTap, Mumbai </div>
+                    <p>
 								
-					<ul>
-						<li> 
-							Working on debugging and resolving issues raised on Core product.(Vue, Java, Javascript)						
-						</li>
-						<li>
-							Working on issues related to UI and providing Root Cause Analysis.(Vue, Java, Javascript)
-						</li>
-					</ul>
+                        <ul>
+                            <li> 
+                                Worked on debugging and resolving issues raised on Core product.(Vue, Java, Javascript)						
+                            </li>
+                            <li>
+                                Worked on issues related to UI and providing Root Cause Analysis.(Vue, Java, Javascript)
+                            </li>
+                        </ul>
 
-				</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> Jan 2020 - Present </span></div>
-                        </div>	
+				    </p>
+                </div>
+            <div class="flex-shrink-0"><span class="text-primary"> Jan 2020 - Present </span></div>
+            </div>	
 		    <!-- 3 end -->
                     
 			<!-- 2 start -->
