Fix job duration dates.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                     </p>
                     </div>
-                <div class="flex-shrink-0"><span class="text-primary"> Jan 2020 - Present </span></div>
+                <div class="flex-shrink-0"><span class="text-primary"> Aug 2022 - Present </span></div>
             </div>	
             <!-- 4 end -->
 
@@ -125,7 +125,7 @@
 
 				    </p>
                 </div>
-            <div class="flex-shrink-0"><span class="text-primary"> Jan 2020 - Present </span></div>
+            <div class="flex-shrink-0"><span class="text-primary"> Jan 2021 - Jul 2022 </span></div>
             </div>	
 		    <!-- 3 end -->
                     
