--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                     <p>     
                         <ul>
                             <li> 
-                                Working on <strong> Credit </strong> backend team (Java, Spring Boot)
+                                Worked on <strong> Credit </strong> backend team (Java, Spring Boot)
                             </li>
                             <li>
-                                Working on creating and maintaining APIs used in whole Credit service feature.
+                                Worked on creating and maintaining APIs used in Credit Loan and Collection services feature.
                             </li>
                         </ul>
 
