--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 Worked on <strong> Credit </strong> backend team (Java, Spring Boot)
                             </li>
                             <li>
-                                Worked on creating and maintaining APIs used in Credit Loan and Collection services feature.
+                                Worked on creating and maintaining APIs used in Credit Loan and Collection services.
                             </li>
                         </ul>
 
