--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-			<li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1rc5UXX3sWcocnGpCqlCbGSXakScp6TqC/view?usp=drivesdk"> Resume </a></li>
+		    <li class="nav-item">
+			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/161UhUTIE_WndfOooO4LpJ3PbMsYRkeDh/view?usp=sharing"> Resume </a>
+		    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"> About </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education"> Education </a></li>
