--- a/index.html
+++ b/index.html
@@ -351,6 +351,10 @@
                     <h2 class="mb-5">Achievements & Certifications</h2>
                     <ul class="fa-ul mb-0">
 			<li>
+				<span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+				<i> Annual Badge 2022 </i> for solving 500+ problems on <i> LeetCode </i>
+			</li>
+			<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
 				<i><a href="https://www.codechef.com/users/amanalphakumar"> 3 &#9733; </a></i> 
 				on Codechef.
