--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 		    <li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/161UhUTIE_WndfOooO4LpJ3PbMsYRkeDh/view?usp=sharing"> Resume </a>
+			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1TRiG_dOqg5XrdXVaWMZ6p_krnuqbsU6Y/view?usp=share_link"> Resume </a>
 		    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"> About </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
@@ -54,7 +54,7 @@
                         <span class="text-primary"> Kumar </span>
                     </h1>
                     <div class="subheading mb-5">
-                        IIIT Nagpur-2020 Passout
+                        IIIT Nagpur
                         <a href="mailto:name@email.com"> amanalphakumar@gmail.com </a>
                     </div>
                     <p class="lead mb-5">
@@ -104,7 +104,7 @@
 
                     </p>
                     </div>
-                <div class="flex-shrink-0"><span class="text-primary"> Aug 2022 - Present </span></div>
+                <div class="flex-shrink-0"><span class="text-primary"> Aug 2022 - Mar 2023 </span></div>
             </div>	
             <!-- 4 end -->
 
@@ -127,7 +127,7 @@
 
 				    </p>
                 </div>
-            <div class="flex-shrink-0"><span class="text-primary"> Jan 2021 - Jul 2022 </span></div>
+            <div class="flex-shrink-0"><span class="text-primary"> Oct 2020 - Jul 2022 </span></div>
             </div>	
 		    <!-- 3 end -->
                     
