--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 		    <li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1TRiG_dOqg5XrdXVaWMZ6p_krnuqbsU6Y/view?usp=share_link"> Resume </a>
+			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1pRyJDNrZMXVeZYPc7L6qelE1MH1OHNgZ/view?usp=drive_link"> Resume </a>
 		    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"> About </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
@@ -60,7 +60,7 @@
                     <p class="lead mb-5">
 			    			Hi, I am Aman, <strong>B.Tech</strong> in <strong>Computer Science and Engineering</strong> at 
 			    			<strong>Indian Institute of Information Technology, Nagpur</strong> of passout batch 2020. 
-			    			I am currently working at <i><a href="https://groww.in/" target="_blank"> Groww </a></i>. 
+			    			I am currently working at <i>Ripik.ai</i>. 
 			    			I have worked as a Software Engineer at <i><a href="https://clevertap.com/" target="_blank"> Clevertap </a> 
                     
 						I have also worked as a Software Developer Intern at <i><a href="https://thesolarlabs.com/" target="_blank">The Solar Labs</a></i>.
@@ -100,6 +100,9 @@
                             <li>
                                 Worked on creating and maintaining APIs used in Credit Loan and Collection services.
                             </li>
+			    <li>
+				Worked on fixing identified IDOR issues in multiple APIs.
+			    </li>
                         </ul>
 
                     </p>
@@ -123,6 +126,9 @@
                             <li>
                                 Worked on issues related to UI and providing Root Cause Analysis.(Vue, Java, Javascript)
                             </li>
+			   <li>
+				Worked on solving and fixing critical issues in Analytics and Storage teams.
+			   </li>
                         </ul>
 
 				    </p>
