--- a/index.html
+++ b/index.html
@@ -86,6 +86,38 @@
 			
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+
+			<!-- 5 start -->
+			<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0"> Software Engineer </h3>
+                    <div class="subheading mb-3"> Ripik.ai, Noida </div>
+                    <p>     
+                        <ul>
+                            <li> 
+                                Core backend developer of all Vision(AI using Computer Vision) Tools for Ripik.ai (Java, Spring Boot, Python, Django, Flask)
+                            </li>
+                            <li>
+                                Understood complete product usecases and standardized all Vision usecases into single flow, to add all tools in single dashboard. 
+				    Re-worked all code bases from Django/Flask to Java Spring Boot with MongoDB.
+                            </li>
+			    <li>
+				Solved critical product loopholes. Worked to improve scalability and availability on all Vision services, including work on server side deployment.
+			    </li>
+			<li>
+				Work with Data Science teams to deploy AI models both on cloud platforms like AWS, Azure along with full client-side deployments.
+				Introduced good coding practices such as creating and maintaining single common repo for in-house python packages.
+			</li>
+				<li>
+					Rich experience working with Docker, AWS ec2, s3, EBS, ECS and Github Actions for CI/CD.
+				</li>
+                        </ul>
+
+                    </p>
+                    </div>
+                <div class="flex-shrink-0"><span class="text-primary"> Aug 2022 - Mar 2023 </span></div>
+            </div>	
+            <!-- 5 end -->
 			
 			<!-- 4 start -->
 			<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
