--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 				Solved critical product loopholes. Worked to improve scalability and availability on all Vision services, including work on server side deployment.
 			    </li>
 			<li>
-				Work with Data Science teams to deploy AI models both on cloud platforms like AWS, Azure along with full client-side deployments.
-				Introduced good coding practices such as creating and maintaining single common repo for in-house python packages.
+				Work with Data Science teams to deploy AI models both on cloud platforms like AWS, Azure along with full Client-side deployments.
 			</li>
 				<li>
+					Introduced good coding practices such as creating and maintaining single common repo for in-house python packages.
 					Rich experience working with Docker, AWS ec2, s3, EBS, ECS and Github Actions for CI/CD.
 				</li>
                         </ul>
@@ -124,6 +124,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0"> Software Engineer </h3>
                     <div class="subheading mb-3"> Groww, Bangalore </div>
+			<img src="https://storage.googleapis.com/groww-assets/web-assets/img/website-logo/groww-logo-light.svg" height="30px" width="100px">
                     <p>     
                         <ul>
                             <li> 
