--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0"> Software Engineer </h3>
                     <div class="subheading mb-3"> CleverTap, Mumbai </div>
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY5Z6p_RN3wPN7hWeSsFOwPNlNHqniFEknie_VwLRNKECSCSPCQExpqgWcrKvng6nnbls&usqp=CAU" height="40px" width="100px">
                     <p>
 								
                         <ul>
