--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                     </p>
                     </div>
-                <div class="flex-shrink-0"><span class="text-primary"> Aug 2022 - Mar 2023 </span></div>
+                <div class="flex-shrink-0"><span class="text-primary"> Jun 2023 - Present </span></div>
             </div>	
             <!-- 5 end -->
 			
