--- a/index.html
+++ b/index.html
@@ -394,6 +394,10 @@
                     <ul class="fa-ul mb-0">
 			<li>
 				<span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+				<i> 100days Badge 2023 </i> on <i> LeetCode </i>
+			</li>
+			<li>
+				<span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
 				<i> Annual Badge 2022 </i> for solving 500+ problems on <i> LeetCode </i>
 			</li>
 			<li>
