--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@
                     <ul class="fa-ul mb-0">
 			<li>
 				<span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-				<i> 100days Badge 2023 </i> on <i> LeetCode </i>
+				<i> 100days Badge 2023 </i> on <a href="https://www.leetcode.com"> LeetCode </a>
 			</li>
 			<li>
 				<span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-				<i> Annual Badge 2022 </i> for solving 500+ problems on <i> LeetCode </i>
+				<i> Annual Badge 2022 </i> for solving 500+ problems on <a href="https://www.leetcode.com"> LeetCode </a>
 			</li>
 			<li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
