--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0"> Software Engineer </h3>
                     <div class="subheading mb-3"> Ripik.ai, Noida </div>
-			<img src="https://ripik.ai/assets/images/mainlogo.png" height="40px" width="120px">
+			<img src="https://media.licdn.com/dms/image/C4D0BAQFX0dxczQGdgw/company-logo_200_200/0/1630497116576/ripik_ai_logo?e=2147483647&v=beta&t=oAmJLqJKL1FpcIY1WN4GX_4T21Uu63yCcY0z0f9_URs" height="60px" width="60px">
                     <p>     
                         <ul>
                             <li> 
