--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0"> Software Engineer </h3>
                     <div class="subheading mb-3"> Ripik.ai, Noida </div>
-			<img src="https://media.licdn.com/dms/image/C4D0BAQFX0dxczQGdgw/company-logo_200_200/0/1630497116576/ripik_ai_logo?e=2147483647&v=beta&t=oAmJLqJKL1FpcIY1WN4GX_4T21Uu63yCcY0z0f9_URs" height="60px" width="60px">
+			<img width="160" alt="Ripik.ai" src="https://github.com/alpha74/webcv/assets/31771552/19692a94-0629-47b5-8e26-d02491e1f402">
                     <p>     
                         <ul>
                             <li> 
