--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 		    <li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1pRyJDNrZMXVeZYPc7L6qelE1MH1OHNgZ/view?usp=drive_link"> Resume </a>
+			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1lzfitVxEQ2_gn3PUc0DPO9uiWvq07N3O/view?usp=sharing"> Resume </a>
 		    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"> About </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
