--- a/index.html
+++ b/index.html
@@ -120,18 +120,13 @@
                     <div class="subheading mb-3"> Groww, Bangalore </div>
 			<img src="https://storage.googleapis.com/groww-assets/web-assets/img/website-logo/groww-logo-light.svg" height="30px" width="100px">
                     <p>     
-                        <ul>
-                            <li> 
-                                Worked on <strong> Credit </strong> backend team (Java, Spring Boot)
-                            </li>
-                            <li>
-                                Worked on creating and maintaining APIs used in Credit Loan and Collection services.
-                            </li>
-			    <li>
-				Worked on fixing identified IDOR issues in multiple APIs.
-			    </li>
-                        </ul>
-
+			<ul>
+			  <li><b>Worked as a Software Developer in the Credit team</b>, building and optimizing financial microservices using Java and Spring Boot.</li>
+			  
+			  <li><b>Designed, developed, and maintained RESTful APIs</b> that powered critical Credit Loan and Load Collection workflows, enabling efficient transaction processing for end-users.</li>
+			  
+			  <li><b>Proactively resolved Insecure Direct Object Reference (IDOR) vulnerabilities</b> in multiple APIs, enhancing the platform’s security and ensuring compliance with industry regulations.</li>
+			</ul>
                     </p>
                     </div>
                 <div class="flex-shrink-0"><span class="text-primary"> Aug 2022 - Mar 2023 </span></div>
