--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                         <a class="social-icon" href="https://www.github.com/alpha74" target="blank"><i class="fab fa-github" title="Github"></i></a>
                         <a class="social-icon" href="https://amanalphakumar.blogspot.com" target="blank"><i class="fab fa-blogger-b" title="Blogger"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/amanalphakumar" target="blank"><i class="fab fa-instagram" target="blank" title="Instagram"></i></a>
+			<a class="social-icon" href="https://ebird.org/profile/MzY3NTgzMQ" target="blank"><i class="fa-solid fa-crow" target="blank" title="eBird"></i></a>
+
+			
 			<!--<a class="social-icon" href="#" target="blank"><i class="fas fa-globe" target="blank" title="Coming soon"></i></a>-->
                     </div>
                 </div>
@@ -347,7 +350,7 @@
                             <span class="fa-li"><i class="fas fa-headphones text-warning"></i></span>
                             I also like listening to good music and instrumentals. 
 							I am a fan of <i>Nolan's</i> movies.
-							I am a avid Bird Watcher, and love <a href="https://www.instagram.com/amanalphakumar/" target="_blank"> photographing </a> them.
+							I am a avid <a href="https://ebird.org/profile/MzY3NTgzMQ" target="_blank">Bird Watcher<a/>, and love <a href="https://www.instagram.com/amanalphakumar/" target="_blank"> photographing </a> them.
                         </li>
 						
 			<li>
