--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                     </p>
                     </div>
-                <div class="flex-shrink-0"><span class="text-primary"> Jun 2023 - Present </span></div>
+                <div class="flex-shrink-0"><span class="text-primary"> Jun 2023 - Aug 2024 </span></div>
             </div>	
             <!-- 5 end -->
 			
