--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0"> Software Engineer </h3>
                     <div class="subheading mb-3"> CleverTap, Mumbai </div>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY5Z6p_RN3wPN7hWeSsFOwPNlNHqniFEknie_VwLRNKECSCSPCQExpqgWcrKvng6nnbls&usqp=CAU" height="80px" width="140px">
+			<img src="https://github.com/user-attachments/assets/fb41e5c1-adac-4825-83c9-0119797a26c3" height="80px" width="140px">
                     <p>
+			    
 								
                         <ul>
 			  <li><b>Diagnosed and Resolved production issues</b> in the core product by performing in-depth debugging across frontend (Vue.js, JavaScript) and backend (Java) components, ensuring uninterrupted business operations.</li>
