--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="flex-grow-1">
                     <h3 class="mb-0"> Software Engineer </h3>
                     <div class="subheading mb-3"> CleverTap, Mumbai </div>
-			<img src="https://github.com/user-attachments/assets/fb41e5c1-adac-4825-83c9-0119797a26c3" height="80px" width="140px">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKhoO0YP6rb79541l-vhansZxbfTXqSiarVQ&s" height="80px" width="140px">
                     <p>
 			    
 								
