--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <a class="social-icon" href="https://amanalphakumar.blogspot.com" target="blank"><i class="fab fa-blogger-b" title="Blogger"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/amanalphakumar" target="blank"><i class="fab fa-instagram" target="blank" title="Instagram"></i></a>
 			<a class="social-icon" href="https://ebird.org/profile/MzY3NTgzMQ" target="blank"><i class="fas fa-dove" target="blank" title="eBird"></i></a>
+			<a class="social-icon" href="hhttps://amanalphakumar.vercel.app" target="blank"><i class="fa-solid fa-images" target="blank" title="eBird"></i></a>
 
 			
 			<!--<a class="social-icon" href="#" target="blank"><i class="fas fa-globe" target="blank" title="Coming soon"></i></a>-->
