--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a class="social-icon" href="https://amanalphakumar.blogspot.com" target="blank"><i class="fab fa-blogger-b" title="Blogger"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/amanalphakumar" target="blank"><i class="fab fa-instagram" target="blank" title="Instagram"></i></a>
 			<a class="social-icon" href="https://ebird.org/profile/MzY3NTgzMQ" target="blank"><i class="fas fa-dove" target="blank" title="eBird"></i></a>
-			<a class="social-icon" href="hhttps://amanalphakumar.vercel.app" target="blank"><i class="fas fa-images" target="blank" title="eBird"></i></a>
+			<a class="social-icon" href="https://amanalphakumar.vercel.app" target="blank"><i class="fas fa-images" target="blank" title="Vercel"></i></a>
 
 			
 			<!--<a class="social-icon" href="#" target="blank"><i class="fas fa-globe" target="blank" title="Coming soon"></i></a>-->
@@ -352,7 +352,7 @@
                             <span class="fa-li"><i class="fas fa-headphones text-warning"></i></span>
                             I also like listening to good music and instrumentals. 
 							I am a fan of <i>Nolan's</i> movies.
-							I am a avid <a href="https://ebird.org/profile/MzY3NTgzMQ" target="_blank">Bird Watcher<a/>, and love <a href="https://www.instagram.com/amanalphakumar/" target="_blank"> photographing </a> them.
+							I am a avid <a href="https://ebird.org/profile/MzY3NTgzMQ" target="_blank">Bird Watcher<a/>, and love <a href="https://amanalphakumar.vercel.app" target="_blank"> photographing </a> them.
                         </li>
 						
 			<li>
