--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 		    <li class="nav-item">
-			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1KP3ru1lT56MH1mzCMkMKrrcdDRzBNThX/view?usp=sharing"> Resume </a>
+			    <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1CWmfA9X6kr9PGqSJ1fJB-ukYkc0dgeDm/view"> Resume </a>
 		    </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about"> About </a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"> Experience </a></li>
