--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p class="lead mb-5">
 			    			Hi, I am Aman, <strong>B.Tech</strong> in <strong>Computer Science and Engineering</strong> at 
 			    			<strong>Indian Institute of Information Technology, Nagpur</strong> of passout batch 2020. 
-			    			I am currently working at <i>LevelAI</i>. 
+			    			I am currently working at <i><a href="https://thelevel.ai/" target="_blank"> LevelAI </a></i>. 
 			    			I have worked as a Software Engineer at <i><a href="https://clevertap.com/" target="_blank"> Clevertap </a> 
                     
 						I have also worked as a Software Developer Intern at <i><a href="https://thesolarlabs.com/" target="_blank">The Solar Labs</a></i>.
